# Code_Context_Engine

./: .env  .env.example  .mcp.json  CLAUDE.md  README.md  cli.py  config.py  pyproject.toml  requirements.txt  server.py
docs/: API.md  CONFIG.md  develop_plan.md  win_help.md  架构.md
engine/: __init__.py  db.py  indexer.py  logger.py  parser.py  query.py  retry.py  watcher.py
index_db/: context_engine.db
tests/: __init__.py  test_benchmark.py  test_cache.py  test_call_graph.py  test_db.py  test_parser.py  test_query.py  test_search.py  test_search_ce.py  test_search_simple.py  test_watcher.py
tests/fixtures/: call_graph_sample.py  call_graph_sample.ts  sample_python.py  sample_typescript.ts  search_sample.py
